[package]
name = "wcn_node"
version = "0.0.0"
edition = "2021"
authors = [
    "Victor Farazdagi <victor@walletconnect.com>",
    "Ivan Reshetnikov <ivan@walletconnect.com>",
    "Nodar Darksome <nodar@walletconnect.com>",
    "Daniel Martinez <daniel@walletconnect.com>",
]
license = "Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"
name = "wcn_node"

[[bin]]
path = "src/main.rs"
name = "wcn_node"

[features]
default = ["testing"]
testing = ["wcn/testing"]
memory_profiler = ["wc/profiler"]

[lints]
workspace = true

[dependencies]
wcn = { package = "wcn_core", path = "../core" }
sharding = { path = "../sharding" }
logging = { path = "../logging" }
auth = { workspace = true }
domain = { workspace = true }
raft_api = { workspace = true, features = ["server", "client"] }
storage_api = { workspace = true, features = ["server"] }
admin_api = { workspace = true, features = ["server"] }
client_api = { workspace = true, features = ["server", "client"] }
migration_api = { workspace = true, features = ["server", "client"] }
echo_api = { workspace = true, features = ["server", "client"] }
pulse_api = { workspace = true, features = ["server", "client"] }
pulse_monitor = { workspace = true }
raft = { workspace = true }
wcn_rpc = { workspace = true, features = ["server"] }
relay_rocks = { workspace = true }
wc = { workspace = true, features = ["alloc", "future", "metrics"] }
metrics = { workspace = true }
time = { workspace = true }

anyhow = "1"
atty = "0.2"
axum = "0.6"
async-trait = "0.1"
base64 = "0.20"
backoff = { version = "0.4", features = ["tokio"] }
derive_more = { workspace = true, features = [
    "as_ref",
    "display",
    "from",
    "try_into",
    "deref",
] }
derivative = "2"
envy = "0.4"
futures = "0.3"
hyper = { version = "0.14", default-features = false, features = ["full"] }
tokio = { version = "1", default-features = false, features = ["fs", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
serde = "1"
serde_json = "1"
thiserror = "1"
metrics-exporter-prometheus = "0.15"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
tap = "1.0"
sysinfo = "0.29"
proc-mounts = "0.3"
libp2p = { workspace = true }
parking_lot = "0.12"
nix = { version = "0.28", default-features = false, features = ["signal"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
anyerror = "0.1"

alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "contract",
    "providers",
    "provider-http",
    "signer-mnemonic",
] }
reqwest = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false }
if-addrs = "0.13"
pin-project = "1.0"
vergen-pretty = { version = "0.3", features = ["trace"] }

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "cargo",
    "git",
    "gitoxide",
    "rustc",
] }

[dev-dependencies]
replication = { package = "wcn_replication", path = "../replication" }
storage_api = { workspace = true, features = ["client", "server"] }
admin_api = { workspace = true, features = ["client", "server"] }
tempfile = "3"
test-log = "0.2"
once_cell = "1.17"
rand = "0.8"
smallvec = { version = "1.11", features = ["serde"] }
anyhow = "1"
env_logger = "0.10"
chrono = "0.4"
rstest = "0.18"
itertools = "0.11"
rmp-serde = "=1.1.2"
sharding = { path = "../sharding", features = ["testing"] }
