[package]
name = "wcn_node2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
name = "wcn_node"

[[bin]]
path = "src/main.rs"
name = "wcn_node"

[lints]
workspace = true

[dependencies]
# Local
wcn_logging = { workspace = true }
wcn_rpc = { workspace = true, features = ["client", "server"] }
wcn_cluster = { workspace = true }
wcn_storage_api2 = { workspace = true, features = ["rpc_client", "rpc_server"] }
wcn_cluster_api = { workspace = true, features = ["rpc_server"] }
wcn_migration = { workspace = true }
wcn_replication2 = { workspace = true }

# Org
wc = { workspace = true, features = ["alloc"] }

# Derives
derive_more = { workspace = true, features = ["as_ref"] }
derive-where = { workspace = true }
thiserror = { workspace = true}

# General purpose
anyhow = { workspace = true }
tap = { workspace = true }
time = { workspace = true }

# Encoding
base64 = { workspace = true }

# Serialization
serde = { workspace = true }

# Async
futures = { workspace = true }
futures-concurrency = { workspace = true }
tokio = { version = "1", default-features = false, features = ["signal"] }

# O11y
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sysinfo = { workspace = true, features = ["system", "network"] }

# Other
libp2p-identity = { workspace = true }
xxhash-rust = { workspace = true }
axum = { workspace = true }
envy = { workspace = true }
vergen-pretty = { workspace = true }

[dev-dependencies]
wcn_client = { workspace = true }
wcn_cluster = { workspace = true, features = ["testing"] }
wcn_db = { workspace = true }

const-hex = { workspace = true }

tokio = { workspace = true }

tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "parking_lot",
    "json",
] }

libp2p-identity = { workspace = true, features = ["rand"] }
alloy = { workspace = true, features = [
    "provider-anvil-node",
    "node-bindings",
] }

[build-dependencies]
vergen = { workspace = true }
