[package]
name = "relay_irn"
version = "0.1.0"
edition = "2021"
publish = false

[features]
randomized-tests = []
testing = []

[lints]
workspace = true

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
libp2p = { version = "0.53", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1.0"
derive_more = { workspace = true, features = [
    "as_ref",
    "display",
    "from",
    "try_into",
] }
futures = "0.3"
dashmap = "5.4"
tap = "1.0"
async-trait = "0.1"
bitflags = { version = "2.3", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "clock",
] }
rand = "0.7"
once_cell = "1.17"
smallvec = { version = "1.11", features = ["serde", "write"] }
fnv = "1.0"
pin-project = "1.0"
derivative = "2.2"
num-traits = "0.2"
bytes = "1"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
wc = { workspace = true, features = ["metrics"] }
itertools = "0.12"
serde_with = "3.4"

[dev-dependencies]
tui = "0.19"
structopt = { version = "0.3", default-features = false }
better-panic = "0.3"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
tracing-appender = "0.2"
hex = "0.4"
difference = "2.0"
test-log = "0.2"
env_logger = "0.10"
tokio-stream = { version = "0.1", features = ["time", "sync"] }
criterion = "0.5"
alloc_counter = "0.0.4"
rstest = "0.18"

[[bench]]
name = "partitioner"
harness = false
