[package]
name = "wcn_replication2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive-where = { workspace = true }
wc = { workspace = true, features = ["metrics"] }
xxhash-rust = { workspace = true }
storage_api = { package = "wcn_storage_api2", path = "../storage_api2", features = ["rpc_client"] }
cluster = { package = "wcn_cluster", path = "../cluster" }

futures = "0.3"
tap = "1.0"
smallvec = { version = "1.11" }
tokio = { version = "1", default-features = false }
tracing = "0.1"

derive_more = { version = "1.0.0", features = ["as_ref"] }

thiserror = "1"

futures-concurrency = "7.6"
heapless = "0.8"

[dev-dependencies]
tokio = { version = "1", default-features = false }
storage_api = { package = "wcn_storage_api2", path = "../storage_api2", features = ["testing"] }
cluster = { package = "wcn_cluster", path = "../cluster", features = ["testing"] }

[lints]
workspace = true
