[package]
name = "wcn_replication2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Local 
wcn_storage_api2 = { workspace = true }
wcn_cluster = { workspace = true }

# Org
wc = { workspace = true, features = ["metrics"] }

# Derives
derive-where = { workspace = true }
thiserror = { workspace = true }

# General purpose
tap = { workspace = true }

# Collections
smallvec = { workspace = true }

# Async
futures = { workspace = true }
futures-concurrency = { workspace = true }
tokio = { workspace = true }

# O11y
tracing = { workspace = true }

# Other
xxhash-rust = { workspace = true }

[dev-dependencies]
wcn_storage_api2 = { workspace = true, features = ["testing"] }
wcn_cluster = { workspace = true, features = ["testing"] }

derive_more = { workspace = true, features = ["as_ref"] }

[lints]
workspace = true
