[package]
name = "relay_rocks"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
wc = { workspace = true, features = ["future_metrics"] }
metrics = { workspace = true }

thiserror = "1.0"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
tokio-util = { version = "0.7.9", features = ["compat", "codec"] }
async-trait = "0.1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
tap = "1.0"
tracing = "0.1"
base64 = "0.21"
bytes = { version = "1", features = ["std", "serde"] }
iter-read = "0.3"
futures = "0.3"
byteorder = "1.4"
linemux = "0.3.0"
itertools = "0.11"
num_cpus = "1.16"
postcard = { version = "1.0", default-features = false, features = [
    "alloc",
    "use-std",
] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["test-util"] }
test-context = "0.1"
test-log = "0.2"
env_logger = "0.10"
tempfile = "3"
