[package]
name = "wcn_rocks"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
# Derives
derive_more = { workspace = true, features = ["from"] }
thiserror = { workspace = true }

# General purpose
tap = { workspace = true }
itertools = { workspace = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }

# Async
futures = { workspace = true }
async-trait = "0.1" # TODO: remove
async-stream = { version = "0.3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread"] }

# O11y
tracing = { workspace = true }
metrics = { workspace = true }

# Other
byteorder = { version = "1.4", default-features = false, features = ["std"] }
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
linemux = { version = "0.3", default-features = false, features = ["tokio"] }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

test-log = "0.2"
tempfile = "3"
