[package]
name = "wcn_rpc"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = []
server = []

[dependencies]
derive_more = { workspace = true } 
derivative = "2.2"
futures = "0.3"
indexmap = "2"
tracing = { version = "0.1" }
tokio = { version = "1", default-features = false, features = [
    "sync",
    "time",
    "io-util",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat", "codec"] }
tokio-serde = { git = "https://github.com/xDarksome/tokio-serde.git", rev = "6df9ff9", features = [
    "json"
] }
tokio-serde-postcard = { git = "https://github.com/xDarksome/tokio-serde-postcard.git", rev = "5e1b77a" }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
libp2p = { workspace = true }
pin-project = "1.0"
serde = { version = "1" }
thiserror = "1.0"
wc = { workspace = true, features = ["collections", "future", "metrics"] }
metrics = { workspace = true }

quinn = "0.11"
quinn-proto = "0.11"
libp2p-tls = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
tap = "1"
socket2 = "0.5.5"

[dev-dependencies]
tracing-subscriber = "0.3"
