[package]
name = "wcn_rpc"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = []
server = []

[dependencies]
derive_more = { workspace = true, features = ["display", "try_from"] }
derive-where = { workspace = true }
strum = { workspace = true , features = ["derive"] }
derivative = "2.2"
futures = "0.3"
indexmap = "2"
tracing = { version = "0.1" }
tokio = { version = "1", default-features = false, features = [
    "sync",
    "time",
    "io-util",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat", "codec"] }
tokio-serde = { workspace = true, features = ["json"] }
tokio-serde-postcard = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
bytes = "1"
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
libp2p = { workspace = true }
pin-project = "1.0"
serde = { version = "1" }
thiserror = "1.0"
wc = { workspace = true, features = ["collections", "future", "metrics"] }
metrics = { workspace = true }

quinn = "0.11.8"
quinn-proto = "0.11"
libp2p-tls = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
tap = "1"
socket2 = "0.5.5"
nix = { version = "0.28", default-features = false, features = ["socket", "net"] }
governor = { version = "0.8", default-features = false, features = ["std"] }
mini-moka = { version = "0.10", default-features = false, features = ["sync"] }
arc-swap = "1.7"

[dev-dependencies]
tracing-subscriber = "0.3"
