[package]
name = "wcn_rpc"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = []
server = []

[dependencies]
# Local
wcn_rpc_derive = { path = "./derive" }

# Org
wc = { workspace = true, features = ["collections", "future", "metrics"] }

# Derives
derive_more = { workspace = true, features = ["display", "try_from", "deref", "from"] }
derive-where = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true , features = ["derive"] }

# General purpose
backoff = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

# Async
futures = { workspace = true }
futures-concurrency = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream = { workspace = true }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
tokio-serde = { workspace = true, features = ["json"] }
tokio-serde-postcard = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }

# Other 
libp2p = { version = "0.55", default-features = false } # TODO: switch to `libp2p-identity`
libp2p-tls = { version = "0.5", default-features = false }
quinn = { version = "0.11.8", default-features = false, features = ["rustls", "runtime-tokio"] }
quinn-proto = { version = "0.11", default-features = false }
socket2 = { version = "0.5.5", default-features = false }
nix = { version = "0.28", default-features = false, features = ["socket", "net"] }
governor = { version = "0.8", default-features = false, features = ["std"] }
mini-moka = { version = "0.10", default-features = false, features = ["sync"] }

# TODO: remove
indexmap = "2"
derivative = "2.2"

[dev-dependencies]
tracing-subscriber = "0.3"
