[package]
name = "sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

itertools = "0.11"

stacker = "0.1"

tracing = "0.1"

tracing-subscriber = "0.3"

xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

indexmap = "2"
thiserror = "1"

[lints]
workspace = true

